# sequb-ui

./: .env.example  .eslintrc.json  .gitignore  ADDITIONAL-SECURITY-FIXES.md  ADDITIONAL-SECURITY-IMPLEMENTATION-SUMMARY.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  FRONTEND_BACKEND_INTEGRATION_TASKS.md  INTEGRATION.md  README.md  SECURITY-FIXES.md  SECURITY-IMPLEMENTATION-SUMMARY.md  SECURITY-REVIEW.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_TEST.md  TYPE_SAFETY.md  build-backend.sh  eslint.config.js  index.html  next.config.js  package-lock.json  package.json  sequb-ui.md  test-integration.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  main.tsx  middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  security.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/approvals/: page.tsx
src/app/executions/: page.tsx
src/components/: Bootloader.tsx  error-boundary.tsx  language-selector.tsx
src/features/: NodePalette.tsx
src/hooks/: use-toast.ts  use-websocket.ts
src/lib/: api.ts  auth-service.ts  csrf.ts  discovery.ts  error-context.ts  i18n.ts  logger.ts  offline.ts  rate-limiter.ts  registry.ts  safe-json.ts  secure-api.ts  secure-storage.ts  tauri-ipc.ts  timer-utils.ts  type-helpers.ts  utils.ts  validation.ts  websocket.ts
src/providers/: i18n-provider.tsx
src/stores/: chat-store.ts  node-registry-store.ts  preferences-store.ts  status-store.ts  type-safe-store.ts  ui-configuration-store.ts  useGraphStore.ts  useRegistryStore.ts
src/types/: branded.ts  schema.d.ts  sequb.ts  strict-schema.ts
(+87 files in other folders)
